new updated with photos

--- a/.build/index.html
+++ b/.build/index.html
@@ -8,55 +8,73 @@
   "@body@0": {
     "value": "Amit Upadhyay popularly known as amitu in technology industry. He is IITan from IIT, Mumbai.",
     "dependencies": {
-      "0,0,2": "[{\"dependency_type\":\"Value\",\"condition\":null,\"parameters\":{}}]"
+      "0,1,2": "[{\"dependency_type\":\"Value\",\"condition\":null,\"parameters\":{}}]"
     }
   },
   "@body@1": {
     "value": "Dipak Angrula is has many years of experience in technology and worked in startups. He lastly\r\nseen as Vice President of Engg department in Acko Technologies.",
     "dependencies": {
-      "1,0,2": "[{\"dependency_type\":\"Value\",\"condition\":null,\"parameters\":{}}]"
+      "1,1,2": "[{\"dependency_type\":\"Value\",\"condition\":null,\"parameters\":{}}]"
     }
   },
   "@body@2": {
     "value": "Samir Upadhyay professionly as a medical practitioner. He is individual director in this company",
     "dependencies": {
-      "2,0,2": "[{\"dependency_type\":\"Value\",\"condition\":null,\"parameters\":{}}]"
+      "2,1,2": "[{\"dependency_type\":\"Value\",\"condition\":null,\"parameters\":{}}]"
+    }
+  },
+  "@image@0": {
+    "value": "https://bookface-images.s3.amazonaws.com/avatars/fd5786b8041f77b1b492e2ab89479e6eb02a8ea8.jpg",
+    "dependencies": {
+      "0,0,0": "[{\"dependency_type\":\"Value\",\"condition\":null,\"parameters\":{}}]"
+    }
+  },
+  "@image@1": {
+    "value": "https://bookface-images.s3.amazonaws.com/avatars/ccf52199a3d3c676274ac65dac9151ee3664bc63.jpg",
+    "dependencies": {
+      "1,0,0": "[{\"dependency_type\":\"Value\",\"condition\":null,\"parameters\":{}}]"
+    }
+  },
+  "@image@2": {
+    "value": "https://i.imgur.com/7IRQuAL.jpeg",
+    "dependencies": {
+      "2,0,0": "[{\"dependency_type\":\"Value\",\"condition\":null,\"parameters\":{}}]"
     }
   },
   "@position@0": {
     "value": "CEO",
     "dependencies": {
-      "0,0,1": "[{\"dependency_type\":\"Value\",\"condition\":null,\"parameters\":{}}]"
+      "0,1,1": "[{\"dependency_type\":\"Value\",\"condition\":null,\"parameters\":{}}]"
     }
   },
   "@position@1": {
     "value": "Director",
     "dependencies": {
-      "1,0,1": "[{\"dependency_type\":\"Value\",\"condition\":null,\"parameters\":{}}]"
+      "1,1,1": "[{\"dependency_type\":\"Value\",\"condition\":null,\"parameters\":{}}]"
     }
   },
   "@position@2": {
     "value": "Director",
     "dependencies": {
-      "2,0,1": "[{\"dependency_type\":\"Value\",\"condition\":null,\"parameters\":{}}]"
+      "2,1,1": "[{\"dependency_type\":\"Value\",\"condition\":null,\"parameters\":{}}]"
     }
   },
   "@title@0": {
     "value": "Amit Upadhyay",
     "dependencies": {
-      "0,0,0": "[{\"dependency_type\":\"Value\",\"condition\":null,\"parameters\":{}}]"
+      "0,1,0": "[{\"dependency_type\":\"Value\",\"condition\":null,\"parameters\":{}}]"
     }
   },
   "@title@1": {
     "value": "Dipak Angrula",
     "dependencies": {
-      "1,0,0": "[{\"dependency_type\":\"Value\",\"condition\":null,\"parameters\":{}}]"
+      "1,1,0": "[{\"dependency_type\":\"Value\",\"condition\":null,\"parameters\":{}}]"
     }
   },
   "@title@2": {
     "value": "Samir Upadhyay",
     "dependencies": {
-      "2,0,0": "[{\"dependency_type\":\"Value\",\"condition\":null,\"parameters\":{}}]"
+      "2,1,0": "[{\"dependency_type\":\"Value\",\"condition\":null,\"parameters\":{}}]"
     }
   }
 }
@@ -670,18 +688,21 @@ window.ftd = (function () {
 </head>
     <body>
 
-        <div data-id="main:root" style="align-items: flex-start; align-self: center; border-radius: 0px; border-style: solid; border-width: 0px; box-sizing: border-box; display: flex; flex-direction: column; flex-wrap: wrap; height: 100%; justify-content: flex-start; margin-bottom: auto; margin-top: auto; white-space: initial; width: 100%" class="ft_md"><div data-id="0:main" data-spacing="margin-left:10px" style="align-items: flex-start; align-self: center; background-color: rgba(245,245,245,1); border-color: rgba(0,0,0,1); border-radius: 5px; border-style: solid; border-width: 1px; box-sizing: border-box; display: flex; flex-direction: row; flex-wrap: nowrap; height: 200px; justify-content: flex-start; margin-bottom: auto; margin-top: auto; white-space: initial; width: 100%" class="ft_md"><div data-id="0,0:main" style="align-items: flex-start; align-self: flex-start; border-radius: 0px; border-style: solid; border-width: 0px; box-sizing: border-box; display: flex; flex-direction: column; flex-wrap: nowrap; justify-content: flex-start; padding: 10px; white-space: initial; width: 100%" class="ft_md"><div data-id="0,0,0:main" style="align-self: flex-start; border-radius: 0px; border-style: solid; border-width: 0px; box-sizing: border-box; font-weight: 400; text-align: left; white-space: initial" class="ft_md">Amit Upadhyay</div>
-<div data-id="0,0,1:main" style="align-self: flex-start; border-radius: 0px; border-style: solid; border-width: 0px; box-sizing: border-box; font-weight: 400; text-align: left; white-space: initial" class="ft_md">CEO</div>
-<div data-id="0,0,2:main" style="align-self: flex-start; border-radius: 0px; border-style: solid; border-width: 0px; box-sizing: border-box; font-weight: 400; line-height: 26px; text-align: left; white-space: initial" class="ft_md"><p>Amit Upadhyay popularly known as amitu in technology industry. He is IITan from IIT, Mumbai.</p>
+        <div data-id="main:root" style="align-items: flex-start; align-self: center; border-radius: 0px; border-style: solid; border-width: 0px; box-sizing: border-box; display: flex; flex-direction: column; flex-wrap: wrap; height: 100%; justify-content: flex-start; margin-bottom: auto; margin-top: auto; white-space: initial; width: 100%" class="ft_md"><div data-id="0:main" data-spacing="margin-left:10px" style="align-items: flex-start; align-self: center; border-color: rgba(0,0,0,1); border-radius: 5px; border-style: solid; border-width: 1px; box-sizing: border-box; display: flex; flex-direction: row; flex-wrap: nowrap; justify-content: flex-start; margin-bottom: auto; margin-top: auto; padding: 10px; white-space: initial; width: 100%" class="ft_md"><div data-id="0,0:main" style="align-items: flex-start; align-self: flex-start; border-radius: 0px; border-style: solid; border-width: 0px; box-sizing: border-box; display: flex; flex-direction: column; flex-wrap: nowrap; justify-content: flex-start; white-space: initial; width: 150px" class="ft_md"><img alt="" data-id="0,0,0:main" src="https://bookface-images.s3.amazonaws.com/avatars/fd5786b8041f77b1b492e2ab89479e6eb02a8ea8.jpg" style="align-self: flex-start; border-bottom-left-radius: 30px !important; border-radius: 0px; border-style: solid; border-top-left-radius: 30px !important; border-width: 0px; box-sizing: border-box; margin-bottom: auto; margin-top: auto; min-height: 150px; white-space: initial; width: 150px"></div>
+<div data-id="0,1:main" style="align-items: flex-start; align-self: flex-start; border-radius: 0px; border-style: solid; border-width: 0px; box-sizing: border-box; display: flex; flex-direction: column; flex-wrap: nowrap; justify-content: flex-start; margin-left: 10px; padding: 10px; white-space: initial; width: 100%" class="ft_md"><div data-id="0,1,0:main" style="align-self: flex-start; border-radius: 0px; border-style: solid; border-width: 0px; box-sizing: border-box; font-size: 25px; font-weight: 700; text-align: left; white-space: initial" class="ft_md">Amit Upadhyay</div>
+<div data-id="0,1,1:main" style="align-self: flex-start; border-radius: 0px; border-style: solid; border-width: 0px; box-sizing: border-box; font-weight: 400; text-align: left; white-space: initial" class="ft_md">CEO</div>
+<div data-id="0,1,2:main" style="align-self: flex-start; border-radius: 0px; border-style: solid; border-width: 0px; box-sizing: border-box; font-weight: 400; line-height: 26px; text-align: left; white-space: initial" class="ft_md"><p>Amit Upadhyay popularly known as amitu in technology industry. He is IITan from IIT, Mumbai.</p>
 </div></div></div>
-<div data-id="1:main" data-spacing="margin-left:10px" style="align-items: flex-start; align-self: center; background-color: rgba(245,245,245,1); border-color: rgba(0,0,0,1); border-radius: 5px; border-style: solid; border-width: 1px; box-sizing: border-box; display: flex; flex-direction: row; flex-wrap: nowrap; height: 200px; justify-content: flex-start; margin-bottom: auto; margin-top: auto; white-space: initial; width: 100%" class="ft_md"><div data-id="1,0:main" style="align-items: flex-start; align-self: flex-start; border-radius: 0px; border-style: solid; border-width: 0px; box-sizing: border-box; display: flex; flex-direction: column; flex-wrap: nowrap; justify-content: flex-start; padding: 10px; white-space: initial; width: 100%" class="ft_md"><div data-id="1,0,0:main" style="align-self: flex-start; border-radius: 0px; border-style: solid; border-width: 0px; box-sizing: border-box; font-weight: 400; text-align: left; white-space: initial" class="ft_md">Dipak Angrula</div>
-<div data-id="1,0,1:main" style="align-self: flex-start; border-radius: 0px; border-style: solid; border-width: 0px; box-sizing: border-box; font-weight: 400; text-align: left; white-space: initial" class="ft_md">Director</div>
-<div data-id="1,0,2:main" style="align-self: flex-start; border-radius: 0px; border-style: solid; border-width: 0px; box-sizing: border-box; font-weight: 400; line-height: 26px; text-align: left; white-space: initial" class="ft_md"><p>Dipak Angrula is has many years of experience in technology and worked in startups. He lastly
+<div data-id="1:main" data-spacing="margin-left:10px" style="align-items: flex-start; align-self: center; border-color: rgba(0,0,0,1); border-radius: 5px; border-style: solid; border-width: 1px; box-sizing: border-box; display: flex; flex-direction: row; flex-wrap: nowrap; justify-content: flex-start; margin-bottom: auto; margin-top: auto; padding: 10px; white-space: initial; width: 100%" class="ft_md"><div data-id="1,0:main" style="align-items: flex-start; align-self: flex-start; border-radius: 0px; border-style: solid; border-width: 0px; box-sizing: border-box; display: flex; flex-direction: column; flex-wrap: nowrap; justify-content: flex-start; white-space: initial; width: 150px" class="ft_md"><img alt="" data-id="1,0,0:main" src="https://bookface-images.s3.amazonaws.com/avatars/ccf52199a3d3c676274ac65dac9151ee3664bc63.jpg" style="align-self: flex-start; border-bottom-left-radius: 30px !important; border-radius: 0px; border-style: solid; border-top-left-radius: 30px !important; border-width: 0px; box-sizing: border-box; margin-bottom: auto; margin-top: auto; min-height: 150px; white-space: initial; width: 150px"></div>
+<div data-id="1,1:main" style="align-items: flex-start; align-self: flex-start; border-radius: 0px; border-style: solid; border-width: 0px; box-sizing: border-box; display: flex; flex-direction: column; flex-wrap: nowrap; justify-content: flex-start; margin-left: 10px; padding: 10px; white-space: initial; width: 100%" class="ft_md"><div data-id="1,1,0:main" style="align-self: flex-start; border-radius: 0px; border-style: solid; border-width: 0px; box-sizing: border-box; font-size: 25px; font-weight: 700; text-align: left; white-space: initial" class="ft_md">Dipak Angrula</div>
+<div data-id="1,1,1:main" style="align-self: flex-start; border-radius: 0px; border-style: solid; border-width: 0px; box-sizing: border-box; font-weight: 400; text-align: left; white-space: initial" class="ft_md">Director</div>
+<div data-id="1,1,2:main" style="align-self: flex-start; border-radius: 0px; border-style: solid; border-width: 0px; box-sizing: border-box; font-weight: 400; line-height: 26px; text-align: left; white-space: initial" class="ft_md"><p>Dipak Angrula is has many years of experience in technology and worked in startups. He lastly
 seen as Vice President of Engg department in Acko Technologies.</p>
 </div></div></div>
-<div data-id="2:main" data-spacing="margin-left:10px" style="align-items: flex-start; align-self: center; background-color: rgba(245,245,245,1); border-color: rgba(0,0,0,1); border-radius: 5px; border-style: solid; border-width: 1px; box-sizing: border-box; display: flex; flex-direction: row; flex-wrap: nowrap; height: 200px; justify-content: flex-start; margin-bottom: auto; margin-top: auto; white-space: initial; width: 100%" class="ft_md"><div data-id="2,0:main" style="align-items: flex-start; align-self: flex-start; border-radius: 0px; border-style: solid; border-width: 0px; box-sizing: border-box; display: flex; flex-direction: column; flex-wrap: nowrap; justify-content: flex-start; padding: 10px; white-space: initial; width: 100%" class="ft_md"><div data-id="2,0,0:main" style="align-self: flex-start; border-radius: 0px; border-style: solid; border-width: 0px; box-sizing: border-box; font-weight: 400; text-align: left; white-space: initial" class="ft_md">Samir Upadhyay</div>
-<div data-id="2,0,1:main" style="align-self: flex-start; border-radius: 0px; border-style: solid; border-width: 0px; box-sizing: border-box; font-weight: 400; text-align: left; white-space: initial" class="ft_md">Director</div>
-<div data-id="2,0,2:main" style="align-self: flex-start; border-radius: 0px; border-style: solid; border-width: 0px; box-sizing: border-box; font-weight: 400; line-height: 26px; text-align: left; white-space: initial" class="ft_md"><p>Samir Upadhyay professionly as a medical practitioner. He is individual director in this company</p>
+<div data-id="2:main" data-spacing="margin-left:10px" style="align-items: flex-start; align-self: center; border-color: rgba(0,0,0,1); border-radius: 5px; border-style: solid; border-width: 1px; box-sizing: border-box; display: flex; flex-direction: row; flex-wrap: nowrap; justify-content: flex-start; margin-bottom: auto; margin-top: auto; padding: 10px; white-space: initial; width: 100%" class="ft_md"><div data-id="2,0:main" style="align-items: flex-start; align-self: flex-start; border-radius: 0px; border-style: solid; border-width: 0px; box-sizing: border-box; display: flex; flex-direction: column; flex-wrap: nowrap; justify-content: flex-start; white-space: initial; width: 150px" class="ft_md"><img alt="" data-id="2,0,0:main" src="https://i.imgur.com/7IRQuAL.jpeg" style="align-self: flex-start; border-bottom-left-radius: 30px !important; border-radius: 0px; border-style: solid; border-top-left-radius: 30px !important; border-width: 0px; box-sizing: border-box; margin-bottom: auto; margin-top: auto; min-height: 150px; white-space: initial; width: 150px"></div>
+<div data-id="2,1:main" style="align-items: flex-start; align-self: flex-start; border-radius: 0px; border-style: solid; border-width: 0px; box-sizing: border-box; display: flex; flex-direction: column; flex-wrap: nowrap; justify-content: flex-start; margin-left: 10px; padding: 10px; white-space: initial; width: 100%" class="ft_md"><div data-id="2,1,0:main" style="align-self: flex-start; border-radius: 0px; border-style: solid; border-width: 0px; box-sizing: border-box; font-size: 25px; font-weight: 700; text-align: left; white-space: initial" class="ft_md">Samir Upadhyay</div>
+<div data-id="2,1,1:main" style="align-self: flex-start; border-radius: 0px; border-style: solid; border-width: 0px; box-sizing: border-box; font-weight: 400; text-align: left; white-space: initial" class="ft_md">Director</div>
+<div data-id="2,1,2:main" style="align-self: flex-start; border-radius: 0px; border-style: solid; border-width: 0px; box-sizing: border-box; font-weight: 400; line-height: 26px; text-align: left; white-space: initial" class="ft_md"><p>Samir Upadhyay professionly as a medical practitioner. He is individual director in this company</p>
 </div></div></div></div>
 
 
